Some minor things

--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -71,7 +71,7 @@
  KLK_synd_dead_branch_desc:0 "The People need the resources we've seized to further the transition to a more equitable system."
  KLK_synd_right_1:0 "Cooperation Beyond Borders"
  KLK_synd_right_1_desc:0 "Our Indo-Lemurian brothers and sisters have known the truth for generations: the Mandalam have always been there to guide our people aright. We will remind them of the truth they've always known."
- KLK_synd_right_2:0 "The Red Wave Arrives"
+ KLK_synd_right_2:0 "The Orange Wave Arrives"
  KLK_synd_right_2_desc:0 "The growth of Mandalism is inevitable and desireable - we can be the catalyst to bring it to our neighbors near and far."
  KLK_synd_right_A:0 "The Heart of Lemuria"
  KLK_synd_right_A_desc:0 "The borders of Kalari used to extend further into the interior of the continent, and as such, the true governance of the Mandalam also extends to the ancient borders."
