--- a/localisation/KUM_l_english.yml
+++ b/localisation/KUM_l_english.yml
@@ -45,7 +45,7 @@
  KUM_franco_kumari_dev_zone_desc:0 "We should propose a joint development zone with the French. This will provide the opportunity to bring in more foreign investments, while immediately bolstering our economy."
  KUM_pantiyan_volunteers:0 "Pantiyan Volunteers"
  KUM_pantiyan_volunteers_desc:0 "Despite our disavowal of the Pantiyan separatist cause we've still been able to maintain good relations with many groups of Pantiyans. With the right incentives we might be able to convince many of them to immigrate to Kumari and volunteer for our armed forces in order to gain citizenship."
- KUM_support_pantiyans:0 "Support the Pantiyan Rebels"
+ KUM_support_pantiyans:0 "Keep Supporting the Pantiyan Rebels"
  KUM_support_pantiyans_desc:0 "France has long dominated our former neighbor and sometimes ally, Pantiya. The presence of France to our west and Britain to our south is intolerable. The Brits are too well entrenched, but we have long maintained support for the Pantiyans. By funneling arms and other materiel across the border perhaps we can foment a rebellion there and get the French out!"
  KUM_military_camps:0 "Pantiyan Military Camps"
  KUM_military_camps_desc:0 "To prepare for the coming Pantiyan rebellion we must ensure that the rebels are adequately trained to effectively fight the French. By setting up military camps, secretly of course, we can prepare them for their fight for independence."
