--- a/localisation/BL_civil_war_l_english.yml
+++ b/localisation/BL_civil_war_l_english.yml
@@ -66,6 +66,9 @@
  blm.20.t:0 "A Diminished Dominion"
  blm.20.d:0 "A Diminished Dominion"
  blm.20.a:0 "British Lemuria is better now, despite our losses"
+ blm.25.t:0 "The Defeat of Arcadia"
+ blm.25.d:0 "The Defeat of Arcadia"
+ blm.25.a:0 "The rebels are crushed!"
  blm.26.t:0 "The Defeat of Werreurbro"
  blm.26.d:0 "The Defeat of Werreurbro"
  blm.26.a:0 "Order triumphs!"
