Partially fixed BLM CW events

--- a/localisation/AML_mandalism_l_english.yml
+++ b/localisation/AML_mandalism_l_english.yml
@@ -1,3 +1,30 @@
 ﻿l_english:
- mandalism.1.t:0 "Mandalists gain a foothold in the countryside"
- mandalism.1.d:0 "description goes here lol"
+ mandgeneric.1.t:0 "Mandalists Arrive!"
+ mandgeneric.1.d:0 "The Mandalist rebels are organized and have already begun to field military units. They are capturing territory despite our best efforts."
+ mandgeneric.1.a:0 "Curses!"
+ mandgeneric.2.t:0 "Mandalists Gaining Territory"
+ mandgeneric.2.d:0 "---------SOME DESCRIPTION HERE----------"
+ mandgeneric.2.a:0 "Unacceptable!"
+ mandgeneric.3.t:0 "Mandalist Advance Continues"
+ mandgeneric.3.d:0 "We've lost so much territory to the Mandalists. If we don't act soon there will be no area left under the control of the rightful government."
+ mandgeneric.3.a:0 "We must do something!"
+ mandgeneric.4.t:0 "Mandalists Near the Capital"
+ mandgeneric.4.d:0 "---------SOME DESCRIPTION HERE----------"
+ mandgeneric.4.a:0 "Unbelievable!"
+ mandgeneric.5.t:0 "ULTIMATUM"
+ mandgeneric.5.d:0 "The Mandalist leadership, now in control of the majority of our nation, has sent an ultimatum: we are to lay down our arms or they will attack the capital whatever the cost to our people."
+ mandgeneric.5.a:0 "For the good of the people we submit."
+ mandgeneric.5.b:0 "NEVER! (civil war)"
+ mandgeneric.6.t:0 "Mandalist Leader Killed"
+ mandgeneric.6.d:0 "In a daring pre-dawn raid our forces stormed the compound where that villain Asanvarinnu has been hiding. They gunned him down like the worthless scum he was."
+ mandgeneric.6.a:0 "Good Riddance!"
+ mandgeneric.7.t:0 "Enforced Conscription"
+ mandgeneric.7.d:0 "The enormous amount of land now under the control of the Mandalists is beyond unacceptable... it is dangerous! We know that it will hurt our economy, but perhaps we can start conscripting the workers from our factories..."
+ mandgeneric.7.a:0 "Send out the recruiters"
+ mandgeneric.7.b:0 "No, there must be another way."
+ mandgeneric.8.t:0 "Mandalists Defeated"
+ mandgeneric.8.d:0 "Despite the difficulties that beset us on all sides we've succeeded in destroying the Mandalist menace."
+ mandgeneric.8.a:0 "A great day for Kalari!"
+ mandgeneric.9.t:0 "Mandalists defeated in Kalari"
+ mandgeneric.9.d:0 "After a long and bloody conflict, the Mandalist leader Asanvarinnu and its violent rebels are defeated, and we now can reassure the foreigners that our country is safe to invest on."
+ mandgeneric.9.a:0 "A relief for the whole country."
