--- a/localisation/AML_countries_cosmetic_l_english.yml
+++ b/localisation/AML_countries_cosmetic_l_english.yml
@@ -1,6 +1,8 @@
 ﻿l_english:
  FJN_subject:0 "$OVERLORDADJ$ Fijnland"
  FJN_subject_DEF:0 "$OVERLORDADJ$ Fijnland"
+ TAH_fascism:0 "Nationalist Tahiti"
+ TAH_fascism_DEF:0 "Nationalist Tahiti"
  GEQ_REOM_neutrality:0 "Empire of Mu"
  GEQ_REOM_neutrality_DEF:0 "the Empire of Mu"
  GEQ_REOM_fascism:0 "Empire of Mu"
