IMPASSABLE DESERT now has no cities

--- a/localisation/AML_tech_l_english.yml
+++ b/localisation/AML_tech_l_english.yml
@@ -306,8 +306,8 @@
  ATL_light_tank_equipment_1:0 "Burgusamin 200-Atkindo-Čanak"
  ATL_light_tank_equipment_1_short:0 "Bur/200-Ak-Č"
  ATL_light_tank_equipment_1_desc:0 "The Bur/200-Ak-Č is the first tank to enter service in the Atlantean army. Designed by Burgusamin Motor, this diminute tank fits three crewmen. It was first introduced in 1935 and equipped one mobile division."
- ATL_light_tank_artillery_equipment_1:0 "Burgusamin ARTILLERY CARRIER - MOBILE PLATFORM"
- ATL_light_tank_artillery_equipment_1_short:0 "Bur/------"
+ ATL_light_tank_artillery_equipment_1:0 "Burgusamin 200-Hakanonrade"
+ ATL_light_tank_artillery_equipment_1_short:0 "Bur/200-Hk"
  ATL_light_tank_artillery_equipment_1_desc:0 "The ARTILLERY CARRIER MOBILE PLATFORM is a short 75mm cannon bolted over a LIGHT ARMORED CAR chassis."
  ATL_light_tank_destroyer_equipment_1:0 "Burgusamin MOBILE ANTITANK PLATFORM"
  ATL_light_tank_destroyer_equipment_1_short:0 "Bur/------"
