--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -251,7 +251,7 @@
  mandalism.4.t:0 "Mandalists Advance in Mulatavai"
  mandalism.4.d:0 "The Mandalists are boldly striking into the province of Mulatavai. Our retreat after retreat is emboldening them. Soon they will have us surrounded!"
  mandalism.4.a:0 "Unbelievable!"
- mandalism.5.t:0 "ULTIMATUM"
+ mandalism.5.t:0 "ULTIMATUM!"
  mandalism.5.d:0 "The Mandalist leadership, now in control of the majority of our nation, has sent an ultimatum: we are to lay down our arms or they will attack the capital whatever the cost to our people."
  mandalism.5.a:0 "For the good of the people we submit."
  mandalism.5.b:0 "NEVER! (civil war)"
