Generic Mandalist chain + adjacencies

--- a/localisation/AML_mandalism_l_english.yml
+++ b/localisation/AML_mandalism_l_english.yml
@@ -28,3 +28,21 @@
  mandgeneric.9.t:0 "Mandalists defeated in Kalari"
  mandgeneric.9.d:0 "After a long and bloody conflict, the Mandalist leader Asanvarinnu and its violent rebels are defeated, and we now can reassure the foreigners that our country is safe to invest on."
  mandgeneric.9.a:0 "A relief for the whole country."
+ 
+ 
+ 
+ mand_time:0 "Mandalists Reorganize"
+ 
+ KUM_mandalist_offensive1:0 "Militants Preparing an Offensive"
+ KUM_mandalist_offensive2:0 "Militants Preparing an Offensive"
+ KUM_mandalist_offensive3:0 "Militants Preparing an Offensive"
+ KUM_mandalist_offensive4:0 "Militants Preparing an Offensive"
+ CLA_mandalist_offensive1:0 "Militants Preparing an Offensive"
+ CLA_mandalist_offensive2:0 "Militants Preparing an Offensive"
+ CLA_mandalist_offensive3:0 "Militants Preparing an Offensive"
+ LSN_mandalist_offensive1:0 "Militants Preparing an Offensive"
+ 
+ mand_lose_land1:0 "Ongoing Mandalist Offensive"
+ mand_lose_land2:0 "Ongoing Mandalist Offensive"
+ mand_lose_land3:0 "Ongoing Mandalist Offensive"
+ mand_lose_land4:0 "Ongoing Mandalist Offensive"
