--- a/localisation/AML_mandalism_l_english.yml
+++ b/localisation/AML_mandalism_l_english.yml
@@ -36,7 +36,7 @@
  KUM_mandalist_offensive1:0 "Militants Preparing an Offensive"
  KUM_mandalist_offensive2:0 "Militants Preparing an Offensive"
  KUM_mandalist_offensive3:0 "Militants Preparing an Offensive"
- KUM_mandalist_offensive4:0 "Militants Preparing an Offensive"
+ KUM_mandalist_offensive4:0 "Militants Preparing an BITCH Offensive"
  CLA_mandalist_offensive1:0 "Militants Preparing an Offensive"
  CLA_mandalist_offensive2:0 "Militants Preparing an Offensive"
  CLA_mandalist_offensive3:0 "Militants Preparing an Offensive"
@@ -45,4 +45,4 @@
  mand_lose_land1:0 "Ongoing Mandalist Offensive"
  mand_lose_land2:0 "Ongoing Mandalist Offensive"
  mand_lose_land3:0 "Ongoing Mandalist Offensive"
- mand_lose_land4:0 "Ongoing Mandalist Offensive"
+ mand_lose_land4:0 "Ongoing Mandalist NIGGA Offensive"
