--- a/localisation/replace/AML_countries_l_english.yml
+++ b/localisation/replace/AML_countries_l_english.yml
@@ -287,6 +287,8 @@
  AUD_democratic_ADJ:0 "Anglo-Lemurian"
  AUD_neutrality_ADJ:0 "Anglo-Lemurian"
  AUD_communism_ADJ:0 "Anglo-Lemurian"
+ MKL_neutrality:0 "Kalari Mandalist Revolutionaries"
+ MKL_neutrality_DEF:0 "Kalari Mandalist Revolutionaries"
  KLK_fascism:0 "Totalitarian Kalari"
  KLK_fascism_DEF:0 "Totalitarian Kalari"
  KLK_democratic:0 "Kalari"
