KLK civil war basically done

--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -79,7 +79,7 @@
  KLK_synd_right_B_desc:0 "Many dynasties have called Kumari Kandam home, but none have right to claim true and lasting governance over the people like the Mandalam. The rightful governors of the people, the people themselves, must determine their fate."
  KLK_synd_right_C:0 "The March Kings"
  KLK_synd_right_C_desc:0 "Each of the former lands of the ancient March Kings now holds a degenerate and corrupt system which oppresses its people. We must bring them back to an understanding of their roots."
- KLK_synd_center_1:0 "Formalize the Mandalams"
+ KLK_synd_center_1:0 "Formalize the Mandalam"
  KLK_synd_center_1_desc:0 "\"Each mandala, established under the direction of the people, will be entitled to support from the central government and will be required to provide an account of its stewardship on a regular basis.\""
  KLK_synd_center_2:0 "Integrate the Interior"
  KLK_synd_center_2_desc:0 "Many years of neglect have driven a wedge between the interior villages and the seat of central government. If we focus our efforts on mending this divide we can bring them in line with the national changes taking place."
@@ -265,4 +265,10 @@
  mandalism.8.t:0 "Mandalists Defeated"
  mandalism.8.d:0 "Despite the difficulties that beset us on all sides we've succeeded in destroying the Mandalist menace."
  mandalism.8.a:0 "A great day for Kalari!"
+ mandalism.9.t:0 "Mandalists Defeated"
+ mandalism.9.d:0 "Despite the difficulties that beset us on all sides we've succeeded in destroying the Mandalist menace."
+ mandalism.9.a:0 "A great day for Kalari!"
+ mandalism.10.t:0 "Mandalists Defeated"
+ mandalism.10.d:0 "Despite the difficulties that beset us on all sides we've succeeded in destroying the Mandalist menace."
+ mandalism.10.a:0 "A great day for Kalari!"
  
