--- a/localisation/AML_mandalism_l_english.yml
+++ b/localisation/AML_mandalism_l_english.yml
@@ -3,13 +3,13 @@
  mandgeneric.1.d:0 "The Mandalist rebels are organized and have already begun to field military units. They are capturing territory despite our best efforts."
  mandgeneric.1.a:0 "Curses!"
  mandgeneric.2.t:0 "Mandalists Gaining Territory"
- mandgeneric.2.d:0 "---------SOME DESCRIPTION HERE----------"
+ mandgeneric.2.d:0 "Each day that passes sees more territory passing into the hands of the Mandalists!"
  mandgeneric.2.a:0 "Unacceptable!"
  mandgeneric.3.t:0 "Mandalist Advance Continues"
  mandgeneric.3.d:0 "We've lost so much territory to the Mandalists. If we don't act soon there will be no area left under the control of the rightful government."
  mandgeneric.3.a:0 "We must do something!"
  mandgeneric.4.t:0 "Mandalists Near the Capital"
- mandgeneric.4.d:0 "---------SOME DESCRIPTION HERE----------"
+ mandgeneric.4.d:0 "We now continuously hear reports of Mandalist troops gathering near our capital."
  mandgeneric.4.a:0 "Unbelievable!"
  mandgeneric.5.t:0 "ULTIMATUM"
  mandgeneric.5.d:0 "The Mandalist leadership, now in control of the majority of our nation, has sent an ultimatum: we are to lay down our arms or they will attack the capital whatever the cost to our people."
