--- a/localisation/replace/AML_strategic_region_names_l_english.yml
+++ b/localisation/replace/AML_strategic_region_names_l_english.yml
@@ -253,7 +253,7 @@
  STRATEGICREGION_252:0 "Afro-Lemuria"
  STRATEGICREGION_253:0 "Pantiya"
  STRATEGICREGION_254:0 "Marekatan Peninsula"
- STRATEGICREGION_255:0 "STRATEGICREGION_255"
+ STRATEGICREGION_255:0 "Utura Island"
  STRATEGICREGION_256:0 "Sumatran Sea"
  STRATEGICREGION_257:0 "Western Australia"
  STRATEGICREGION_258:0 "Mazu Reach"
