--- a/localisation/AML_mandalism_l_english.yml
+++ b/localisation/AML_mandalism_l_english.yml
@@ -15,19 +15,12 @@
  mandgeneric.5.d:0 "The Mandalist leadership, now in control of the majority of our nation, has sent an ultimatum: we are to lay down our arms or they will attack the capital whatever the cost to our people."
  mandgeneric.5.a:0 "For the good of the people we submit."
  mandgeneric.5.b:0 "NEVER! (civil war)"
- mandgeneric.6.t:0 "Mandalist Leader Killed"
- mandgeneric.6.d:0 "In a daring pre-dawn raid our forces stormed the compound where that villain Asanvarinnu has been hiding. They gunned him down like the worthless scum he was."
- mandgeneric.6.a:0 "Good Riddance!"
- mandgeneric.7.t:0 "Enforced Conscription"
- mandgeneric.7.d:0 "The enormous amount of land now under the control of the Mandalists is beyond unacceptable... it is dangerous! We know that it will hurt our economy, but perhaps we can start conscripting the workers from our factories..."
- mandgeneric.7.a:0 "Send out the recruiters"
- mandgeneric.7.b:0 "No, there must be another way."
  mandgeneric.8.t:0 "Mandalists Defeated"
  mandgeneric.8.d:0 "Despite the difficulties that beset us on all sides we've succeeded in destroying the Mandalist menace."
- mandgeneric.8.a:0 "A great day for Kalari!"
- mandgeneric.9.t:0 "Mandalists defeated in Kalari"
- mandgeneric.9.d:0 "After a long and bloody conflict, the Mandalist leader Asanvarinnu and its violent rebels are defeated, and we now can reassure the foreigners that our country is safe to invest on."
- mandgeneric.9.a:0 "A relief for the whole country."
+ mandgeneric.8.a:0 "We safeguarded the future of our country!"
+ mandgeneric.9.t:0 "Mandalists Victorious in the Civil War"
+ mandgeneric.9.d:0 "Hordes of Mandalist rebels swarmed our capital and already started reforming the government to fit their twisted and radical new ideology."
+ mandgeneric.9.a:0 "An uncertain future for our country..."
  
  
  
