--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -264,11 +264,11 @@
  mandalism.7.b:0 "No, there must be another way."
  mandalism.8.t:0 "Mandalists Defeated"
  mandalism.8.d:0 "Despite the difficulties that beset us on all sides we've succeeded in destroying the Mandalist menace."
- mandalism.8.a:0 "A great day for Kalari!"
- mandalism.9.t:0 "Mandalists Defeated"
- mandalism.9.d:0 "Despite the difficulties that beset us on all sides we've succeeded in destroying the Mandalist menace."
- mandalism.9.a:0 "A great day for Kalari!"
- mandalism.10.t:0 "Mandalists Defeated"
+ mandalism.8.a:0 "Despite the difficulties that beset us on all sides we've succeeded in destroying the Mandalist menace."
+ mandalism.9.t:0 "Mandalists Win Civil War"
+ mandalism.9.d:0 "Despite our best efforts, the Mandalist army led by Asanvarinnu took control of the government apparatus and imposed their new system upon the country."
+ mandalism.9.a:0 "A dark day for Kalari"
+ mandalism.10.t:0 "Mandalists Lose the Civil War"
  mandalism.10.d:0 "Despite the difficulties that beset us on all sides we've succeeded in destroying the Mandalist menace."
- mandalism.10.a:0 "A great day for Kalari!"
+ mandalism.10.a:0 "The future is safeguarded from these murderers!"
  
