--- a/localisation/replace/AML_countries_l_english.yml
+++ b/localisation/replace/AML_countries_l_english.yml
@@ -289,6 +289,12 @@
  AUD_communism_ADJ:0 "Anglo-Lemurian"
  MKL_neutrality:0 "Kalari Mandalist Revolutionaries"
  MKL_neutrality_DEF:0 "Kalari Mandalist Revolutionaries"
+ MKM_neutrality:0 "Kumari Mandalist Revolutionaries"
+ MKM_neutrality_DEF:0 "Kumari Mandalist Revolutionaries"
+ MCL_neutrality:0 "Cholan Mandalist Revolutionaries"
+ MCL_neutrality_DEF:0 "Cholan Mandalist Revolutionaries"
+ MLS_neutrality:0 "Lasnovan Mandalist Revolutionaries"
+ MLS_neutrality_DEF:0 "Lasnovan Mandalist Revolutionaries"
  KLK_fascism:0 "Totalitarian Kalari"
  KLK_fascism_DEF:0 "Totalitarian Kalari"
  KLK_democratic:0 "Kalari"
