Mandalist civil wars completed

--- a/localisation/AML_mandalism_l_english.yml
+++ b/localisation/AML_mandalism_l_english.yml
@@ -21,6 +21,10 @@
  mandgeneric.9.t:0 "Mandalists Victorious in the Civil War"
  mandgeneric.9.d:0 "Hordes of Mandalist rebels swarmed our capital and already started reforming the government to fit their twisted and radical new ideology."
  mandgeneric.9.a:0 "An uncertain future for our country..."
+ mandgeneric.9.t:0 "Mounting Casualties Angers our People"
+ mandgeneric.10.d:0 "With no substantial advance, and with our soldiers being sent to almost certain death, the people are starting to question the very reasons we are still fighting a lost war. There are clearly Mandalist sympathizers in the territories we still hold, and they are threatening to rebel if we don't stop this carnage."
+ mandgeneric.10.a:0 "No material gain can justify the killing of our own brothers"
+ mandgeneric.10.b:0 "This is nothing but the price of victory!"
  
  
  
@@ -39,3 +43,14 @@
  mand_lose_land2:0 "Ongoing Mandalist Offensive"
  mand_lose_land3:0 "Ongoing Mandalist Offensive"
  mand_lose_land4:0 "Ongoing Mandalist Offensive"
+ 
+ mandalists_defeated:0 "Mandalists Defeated"
+ mandalists_victorious:0 "Mandalists Victorious"
+ 
+ KUM_casualties:0 "Mandalist sympathizers in our territory will join the rebellion"
+ CLA_casualties:0 "Mandalist sympathizers in our territory will join the rebellion"
+ LSN_casualties:0 "Mandalist sympathizers in our territory will join the rebellion"
+ 
+ MAN_insurrection:0 "Popular Insurrection"
+ MAN_defeatism:0 "Defeatism"
+ MAN_nonaligned_idea:0 "Mandalists in the Government"
