--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -193,6 +193,13 @@
  KLK_militia_idea_2:0 "Large Militias"
  KLK_stal_idea:0 "Secret Police"
  KLK_crippled_economy:0 "Crippled Economy"
+ KLK_razed_country:0 "Razed Country"
+ KLK_razed_country_2:0 "Razed Country"
+ KLK_razed_country_3:0 "Razed Country"
+ KLK_FUD:0 "Uncertain Future"
+ KLK_FUD_2:0 "Uncertain Future"
+ 
+ 
  
  KLK_mandalist_guerrillas_debuff:0 "Guerrillas in the East"
  KLK_mandalist_guerrillas_debuff_0:0 "Guerrillas Gaining Land"
@@ -236,6 +243,11 @@
  KLK_assassination_2:0 "Kill Mandalist General"
  KLK_assassination_3:0 "Kill Asanvarinnu"
  
+ KLK_recore_1000:0 "Integrate Daimetarha"
+ KLK_recore_1027:0 "Integrate Mulatavai"
+ KLK_recore_1028:0 "Integrate Itoemurea"
+ KLK_recore_1029:0 "Integrate Enmagrame"
+ 
  
  ####### events
  KLK_test:0 "Mandalists Reorganize"
@@ -271,4 +283,10 @@
  mandalism.10.t:0 "Mandalists Lose the Civil War"
  mandalism.10.d:0 "Despite the difficulties that beset us on all sides we've succeeded in destroying the Mandalist menace."
  mandalism.10.a:0 "The future is safeguarded from these murderers!"
+ mandalism.11.t:0 "Economy Recovers"
+ mandalism.11.d:0 "All the years of struggle that left our country destroyed are now but a distant memory. Reports indicate that the industry is recovering and that unemployment is falling."
+ mandalism.11.a:0 "A prosperous future awaits!"
+ mandalism.11.t:0 "Trust in the new government increases"
+ mandalism.11.d:0 "After the disastrous civil war that ravaged our country, the people are starting to feel at home with our government. Local leaderships are starting to cooperate and the population is feeling more optimistic and less antagonistic to our actions."
+ mandalism.11.a:0 "A prosperous future awaits!"
  
