--- a/localisation/AML_mandalism_l_english.yml
+++ b/localisation/AML_mandalism_l_english.yml
@@ -54,3 +54,7 @@
  MAN_insurrection:0 "Popular Insurrection"
  MAN_defeatism:0 "Defeatism"
  MAN_nonaligned_idea:0 "Mandalists in the Government"
+ MAN_mandalist_guerrillas_debuff:0 "Mandalist Terror"
+ MAN_mandalist_guerrillas_debuff_0:0 "Mandalist Terror"
+ MAN_mandalist_guerrillas_debuff_1:0 "Mandalist Terror"
+ MAN_mandalist_guerrillas_debuff_2:0 "Mandalist Terror"
