--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -168,6 +168,8 @@
  FMU_austral_dominance_doctrine:1 "Austral Dominance Doctrine"
  FMU_austral_dominance_doctrine_desc:1 "The Austral Ocean is our ocean. Our navy is and must always be the most powerful navy on the Austral Ocean - no matter what enemies or even allies might say!"
  FMU_germans_are_super_bros1:0 "German Brotherhood"
+ FMU_germans_are_super_bros2:0 "German Brotherhood"
+ FMU_germans_are_super_bros3:0 "German Brotherhood"
  FMU_aggressive_strikes1:0 "Aggressive Moves"
  FMU_colonial_companies_subsidies:0 "Colonial Company Subsidies"
  FMU_plantations_nationalized:0 "Plantations Nationalized"
